--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       tg.expand();
       // const client = new pro-talkWebSDK.WebChatClient({
       //   config: {
-      //     bot_id: "8396_WiQGviBsTplGsgGO0xZDSDOR5vgvql8G", //ID of your bot on pro-talk.ru
+      //     bot_id: "8396", //ID of your bot on pro-talk.ru
       //   },
       //   componentProps: {
       //     title: "pro-talk",
@@ -29,7 +29,7 @@
       // client.destroy();
       new pro-talkWebSDK.WebChatClient({
         config: {
-          bot_id: "8396_WiQGviBsTplGsgGO0xZDSDOR5vgvql8G", //ID of your bot on pro-talk.ru
+          bot_id: "8396", //ID of your bot on pro-talk.ru
         },
         componentProps: {
           title: "pro-talk",
