--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <script src="https://telegram\.org/js/telegram-web-app\.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://tg\.dev/js/telegram-web-app\.js"></script>
     <script>
       function setThemeClass() {
         document\.documentElement\.className = Telegram\.WebApp\.colorScheme;
@@ -11,6 +11,7 @@
       Telegram\.WebApp\.onEvent("themeChanged", setThemeClass);
       setThemeClass();
     </script>
+    <script src="https://functions\.pro-talk\.ru/api/v1\.0/get_dialog_ai_widget_api?record_id=recwQhyR6Kx4ZH2hs&promt_id=8396&lang=ru"></script>
   </head>
   <body>
     <script>
@@ -18,6 +19,5 @@
       let tg = window\.Telegram\.WebApp;
       tg\.expand();
     </script>
-    <script src="https://functions\.pro-talk\.ru/api/v1\.0/get_dialog_ai_widget_api?record_id=recwQhyR6Kx4ZH2hs&promt_id=8396&lang=ru"></script>
   </body>
 </html>
