--- a/index.html
+++ b/index.html
@@ -1,34 +1,47 @@
-<\!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://tg\.dev/js/telegram-web-app\.js"></script>
+    <script src="https://tg.dev/js/telegram-web-app.js"></script>
     <script>
       function setThemeClass() {
-        document\.documentElement\.className = Telegram\.WebApp\.colorScheme;
+        document.documentElement.className = Telegram.WebApp.colorScheme;
       }
-      Telegram\.WebApp\.onEvent("themeChanged", setThemeClass);
+      Telegram.WebApp.onEvent("themeChanged", setThemeClass);
       setThemeClass();
     </script>
+        <script type="text/javascript">
+            document.umnicoWidgetHash = '95435509ca7e52720ca4f8db924acbf1';
+            var x = document.createElement('script');
+            x.src = 'https://umnico.com/assets/widget-loader.js';
+            x.type = 'text/javascript';
+            x.charset = 'UTF-8';
+            x.async = true;
+            document.body.appendChild(x);
+        </script>
   </head>
   <body>
     <script>
-      Telegram\.WebApp\.ready(function() {
-        let tg = window\.Telegram\.WebApp;
-        tg\.expand();
-        console\.log("Telegram Web App is ready");
-
-        // Инициализация виджета после готовности Telegram Web App
-        let script = document\.createElement('script');
-        script\.src = "https://functions\.pro-talk\.ru/api/v1\.0/get_dialog_ai_widget_api?record_id=recwQhyR6Kx4ZH2hs&promt_id=8396&lang=ru";
-        script\.onload = function() {
-          console\.log("Widget script loaded successfully");
-        };
-        script\.onerror = function() {
-          console\.error("Error loading widget script");
-        };
-        document\.body\.appendChild(script);
+      Telegram.WebApp.ready();
+      let tg = window.Telegram.WebApp;
+      tg.expand();
+      // const client = new pro-talkWebSDK.WebChatClient({
+      //   config: {
+      //     bot_id: "8396", //ID of your bot on pro-talk.ru
+      //   },
+      //   componentProps: {
+      //     title: "pro-talk",
+      //   },
+      // });
+      // client.destroy();
+      new pro-talkWebSDK.WebChatClient({
+        config: {
+          bot_id: "8396", //ID of your bot on pro-talk.ru
+        },
+        componentProps: {
+          title: "pro-talk",
+        },
       });
     </script>
   </body>
